# Snake

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt
src/: main.cpp
